<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo_petikcare"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/background_awan_login"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_auth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        app:cardBackgroundColor="@color/white_trans_55"
        app:cardElevation="0dp"
        app:cardCornerRadius="20dp"
        app:cardPreventCornerOverlap="false"
        app:strokeWidth="3dp"
        app:strokeColor="#E0E0E0"
        app:cardUseCompatPadding="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <TextView
                android:id="@+id/tv_masuk"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:text="@string/masuk"
                android:textColor="#0B705C"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/login_lanjut"
                android:textColor="#95989F"
                app:layout_constraintTop_toBottomOf="@id/tv_masuk"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_desc"
                app:boxBackgroundMode="outline"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                android:layout_marginTop="16dp"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:hintEnabled="false"
                app:boxBackgroundColor="@color/white"
                app:startIconDrawable="@drawable/logo_email"
                app:startIconTint="#BEBEC2"
                android:layout_marginHorizontal="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="#BEBEC2" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:boxBackgroundColor="@color/white"
                app:boxBackgroundMode="outline"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:endIconMode="password_toggle"
                app:endIconTint="#BEBEC2"
                app:hintEnabled="false"
                android:layout_marginHorizontal="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_email"
                app:startIconCheckable="true"
                app:startIconDrawable="@drawable/logo_password"
                app:startIconTint="#BEBEC2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textColor="#BEBEC2"
                    android:fontFamily="@font/poppins_medium"
                    app:boxBackgroundMode="filled" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/cb_ingat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:buttonTint="#FFFFFF"
                android:drawableStart="@drawable/custom_checkbox_selector"
                android:drawablePadding="8dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/ingat_saya"
                android:textColor="#828D99"
                app:layout_constraintStart_toStartOf="@+id/til_password"
                app:layout_constraintTop_toBottomOf="@+id/til_password" />

            <TextView
                android:id="@+id/tv_lupa_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/lupa_password"
                android:textColor="#4C808F"
                app:layout_constraintBottom_toBottomOf="@+id/cb_ingat"
                app:layout_constraintEnd_toEndOf="@+id/til_password"
                app:layout_constraintTop_toBottomOf="@+id/til_password" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginTop="18dp"
                android:layout_marginHorizontal="15dp"
                android:background="@drawable/btn_masuk_gradient"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textSize="15sp"
                app:cornerRadius="30dp"
                android:elevation="6dp"
                app:backgroundTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cb_ingat" />

            <View
                android:id="@+id/line_left"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="#000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_lanjutkan"
                app:layout_constraintTop_toTopOf="@id/tv_lanjutkan"
                app:layout_constraintBottom_toBottomOf="@id/tv_lanjutkan"
                android:layout_marginStart="15dp"/>

            <TextView
                android:id="@+id/tv_lanjutkan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Atau lanjutkan dengan"
                android:textSize="10sp"
                android:textColor="#95989F"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginTop="18dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintTop_toBottomOf="@id/btn_login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <View
                android:id="@+id/line_right"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="#000000"
                app:layout_constraintStart_toEndOf="@id/tv_lanjutkan"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_lanjutkan"
                app:layout_constraintBottom_toBottomOf="@id/tv_lanjutkan"
                android:layout_marginEnd="15dp"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_google"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginTop="15dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="30dp"
                app:cardElevation="6dp"
                app:layout_constraintEnd_toStartOf="@id/card_facebook"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_lanjutkan">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_google" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_facebook"
                android:layout_width="55dp"
                android:layout_height="55dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="30dp"
                app:cardElevation="6dp"
                app:layout_constraintStart_toEndOf="@id/card_google"
                app:layout_constraintEnd_toStartOf="@id/card_linkedin"
                app:layout_constraintTop_toBottomOf="@+id/tv_lanjutkan"
                android:layout_marginTop="15dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_facebook"
                    android:layout_gravity="center"/>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_linkedin"
                android:layout_width="55dp"
                android:layout_height="55dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="30dp"
                app:cardElevation="6dp"
                app:layout_constraintStart_toEndOf="@id/card_facebook"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_lanjutkan"
                android:layout_marginTop="15dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_linkedin"
                    android:layout_gravity="center"/>
            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/card_google">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_belum_punya_akun"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:fontFamily="@font/poppins_medium"
                        android:textColor="#828D99"
                        android:text="Belum punya akun?"
                        app:layout_constraintTop_toBottomOf="@id/card_google" />

                    <TextView
                        android:id="@+id/tv_daftar"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="Daftar"
                        android:textSize="16sp"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/poppins_medium"
                        android:textColor="#F76D99"
                        app:layout_constraintStart_toEndOf="@id/tv_belum_punya_akun"
                        app:layout_constraintTop_toBottomOf="@id/card_facebook" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>